--- a/index.html
+++ b/index.html
@@ -1224,8 +1224,8 @@ Expected /conversation POST payload:
       if (isAuthenticatedMode) {
         badge.textContent = 'Authenticated';
         badge.className = 'auth-mode-badge authenticated';
-        description.textContent = 'Sending email_custom and chat_source__c';
-        console.log('🔐 Authentication Mode: AUTHENTICATED - Sending email_custom and chat_source__c');
+        description.textContent = 'Sending all fields (email, email_custom, FirstName, LastName, Subject, chat_source__c)';
+        console.log('🔐 Authentication Mode: AUTHENTICATED - All prechat fields will be sent');
       } else {
         badge.textContent = 'Unauthenticated';
         badge.className = 'auth-mode-badge unauthenticated';
@@ -1248,10 +1248,13 @@ Expected /conversation POST payload:
     // Get hidden fields based on authentication mode
     function getHiddenFieldsForMode() {
       if (isAuthenticatedMode) {
-        // Authenticated: Send only fields configured in Salesforce Omni Flow
-        // Note: Sending fields not configured in routing causes ALL fields to be rejected
+        // Authenticated: Send all fields (user is logged in, we have their data)
         return {
+          email: prechatData.email,
           email_custom: prechatData.email,
+          FirstName: prechatData.firstName,
+          LastName: prechatData.lastName,
+          Subject: prechatData.subject,
           chat_source__c: prechatData.chat_source__c
         };
       } else {
@@ -1314,7 +1317,7 @@ Expected /conversation POST payload:
           const hiddenFields = getHiddenFieldsForMode();
           embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields(hiddenFields);
           console.log('✅ Updated hidden prechat fields:', hiddenFields);
-          console.log('   Mode:', isAuthenticatedMode ? 'Authenticated (email_custom + chat_source__c)' : 'Unauthenticated (chat_source__c only)');
+          console.log('   Mode:', isAuthenticatedMode ? 'Authenticated (all fields)' : 'Unauthenticated (chat_source__c only)');
         } catch (e) {
           console.warn('⚠️ Could not update hidden prechat fields:', e);
         }
@@ -1381,11 +1384,15 @@ Expected /conversation POST payload:
         embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields(hiddenFields);
 
         console.log('✅ setHiddenPrechatFields() called:');
-        console.log('   🔐 Mode:', isAuthenticatedMode ? 'Authenticated (email_custom + chat_source__c)' : 'Unauthenticated (chat_source__c only)');
+        console.log('   🔐 Mode:', isAuthenticatedMode ? 'Authenticated (all fields)' : 'Unauthenticated (chat_source__c only)');
         console.log('   📋 Fields sent:', hiddenFields);
 
         if (isAuthenticatedMode) {
+          console.log('   📧 email:', prechatData.email);
           console.log('   📧 email_custom:', prechatData.email);
+          console.log('   👤 FirstName:', prechatData.firstName);
+          console.log('   👤 LastName:', prechatData.lastName);
+          console.log('   📝 Subject:', prechatData.subject);
         }
         console.log('   🌐 chat_source__c:', prechatData.chat_source__c);
 
